# cmpCmake

./: .gitignore
vsCmake/: vsCmake.sln
vsCmake/vsCmake/: packages.config  vsCmake.cpp  vsCmake.vcxproj  vsCmake.vcxproj.filters
vsCmake1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  packages.config  testadd.cpp  testadd.h  vsCmake.cpp  vsCmake.sln  vsCmake.vcxproj  vsCmake.vcxproj.filters
